@@ -1,3 +1,8 @@
+2012-03-29  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/52759
+	* g++.dg/ext/weak4.C: New test.
+
 2012-03-29  Jason Merrill  <jason@redhat.com>
 
 	PR c++/52743
